aptos-move/flow/src/tests/edit_hook/old_loop_invariant.exp
error[E04003]: built-in operation not supported
  ┌─ old_loop_invariant.move:8:27
  │
8 │                 invariant old(i + s) >= 0;
  │                           ^^^^^^^^^^ `old(..)` in a loop invariant can only take a simple parameter name as argument
